--- a/styles.css
+++ b/styles.css
@@ -43,24 +43,66 @@ body {
 .bento-grid {
     display: grid;
     background-color: aliceblue;
+    margin: 1rem;
+    gap: 2rem;
+    max-width: 1400px;
     padding: 32px;
     border-radius: 21px;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: 75px;
 }
 img {
     max-width: 100%;
     display: block;
 }
 
+.bento-grid .item {
+border-radius: 5rem;
+overflow: hidden;
+}
+/* Colors */
+.bento-grid .item:nth-child(1) {
+background-color: var(accent-subdued);
+}
+
+.bento-grid .item:nth-child(2)
+.bento-grid .item:nth-child(8)
+{
+background-color: var(--primary);
+color: var(white);
+}
+
+.bento-grid .item:nth-child(3) {
+background-color: var(--primary);
+}
+
+.bento-grid .item:nth-child(4)
+.bento-grid .item:nth-child(6) {
+background-color: var(accent-base);
+}
+
+.bento-grid .item:nth-child(2).
+.bento-grid .item:nth-child(2).
+
+
+
 
 
 :root {
---primary: (254, 88%, 90%)
+--primary: (254, 88%, 90%) 
+/* Purple 100 */
 --primary-base: (256, 67%, 59%)
+/* Purple 500 */
 --accent-subdued: (31, 66%, 93%)
+/* Yellow 100 */
 --accent-base: (39, 100%, 71%)
+/* Yellow 500 */
 --white: hsl (0, 0%, 100%)
+/* White */
 --off-white: hsl (0, 0%, 7%)
+/* Off White */
 --black: (0, 0%, 7%)
+/* Black */
 }
 color 1 {
     color:
